# flasky

./: pyproject.toml
flasky/: data.sqlite  hello.py
flasky/templates/: 404.html  500.html  base.html  index.html
