[tool.poetry]
name = "flasky"
version = "0.1.0"
description = ""
authors = ["littlephony <uladzislau.lukashevich@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.3"
flask-bootstrap = "^3.3.7.1"
flask-moment = "^1.0.5"
flask-wtf = "^1.1.1"
flask-sqlalchemy = "^3.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
